name:                observable
version:             0.5.0.0
synopsis:            An embedded language for probabilistic programming.
description:         An embedded language for probabilistic programming.
homepage:            http://github.com/jtobin/observable
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
build-type:          Simple
cabal-version:       >= 1.18

library
  ghc-options:       -O2 -Wall
  exposed-modules:
      Observable
    , Observable.Core
    , Observable.Distribution
    , Observable.Examples
    , Observable.Interpreter
    , Observable.Utils
  default-language:    Haskell2010
  build-depends:
      base
    , containers
    , free
    , measurable          >= 1.0.0.1
    , mcmc-types          >= 0.1.0.3
    , mwc-probability     >= 0.3.3.0
    , mwc-random
    , primitive
    , transformers

